proj1/tests/correct/statictypeassign2.py
class A:
    pass
a::A = A()
print 'str'

