proj1/tests/error/nestedClass2.py
for i in [0]:
    class A:
        pass
print 'str'

